<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/app_title_color">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/ask_select_bmp_tree"
            android:textColor="@color/app_text_color"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ask_phonebook"
            android:textColor="@color/app_text_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/pop_close"
            android:textColor="@color/app_text_color"
            android:textSize="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/app_line_color" />

        <Button
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_item_bg"
            android:padding="10dp"
            android:text="@string/work_success"
            android:textColor="#000000"
            android:textSize="20dp" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/title"
        android:layout_margin="8dp"
        android:horizontalSpacing="8dp"
        android:numColumns="3"
        android:scrollbars="none"
        android:verticalSpacing="8dp"></GridView>

</RelativeLayout>