<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pic_pop_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/pop_windows_bg_transparent">

    <LinearLayout
        android:id="@+id/pic_pop_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/pic_pop_camera_btn"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:text="@string/pop_camera"
            android:textColor="@color/app_text_color"
            android:textSize="17dp"
            android:background="@drawable/app_item_bg"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@color/app_line_color" />

        <Button
            android:id="@+id/pic_pop_photo_btn"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:text="@string/pop_phone"
            android:textColor="@color/app_text_color"
            android:textSize="17dp"
            android:background="@drawable/app_item_bg"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="7dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/pic_pop_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/pop_close"
            android:textColor="@color/app_text_color"
            android:textSize="17dp"
            android:background="@drawable/app_item_bg"
            />
    </LinearLayout>

</RelativeLayout>