<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >
    <com.jws.pandahealth.component.askdoctor.view.Gradient
        android:id="@+id/gradient"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_margin="35dp"
        android:layout_width="match_parent"

        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/questionnow"
            android:text="@string/homefragment_one_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="13dp"
            android:textSize="16dp"
            android:gravity="left|center_vertical"
            android:background="@drawable/home_questionnow_btn"
            android:textColor="@color/white"
            />
            <ImageView
                android:layout_width="23dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:paddingRight="13dp"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@mipmap/askdoctor_right_arrow"
                android:duplicateParentState="true"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/finddoctor"
            android:text="@string/homefragment_two_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="14dp"
            android:background="@drawable/home_finddoctor_btn"
            android:textColor="@color/black_bg"
            />
        <TextView
            android:id="@+id/chinesemedicines"
            android:text="@string/homefragment_three_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="14dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/home_finddoctor_btn"
            android:textColor="@color/black_bg"
            />
        <TextView
            android:id="@+id/chinesemedical"
            android:text="@string/homefragment_four_text"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:minLines="2"
            android:textSize="14dp"
            android:background="@drawable/home_finddoctor_btn"
            android:textColor="@color/black_bg"
            />
    </LinearLayout>

</RelativeLayout>