<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ease_app_search_bg"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ease_app_search_bg"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:minWidth="500dp"
            android:text="@string/dialog_title"
            android:textColor="@color/app_text_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3dp"
            android:minWidth="500dp"
            android:textColor="#666666"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.6dp"
            android:background="@color/app_line_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/about_me_dialog_cancle_bg"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@color/app_agree_color"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="@dimen/app_line_height"
                android:layout_height="fill_parent"
                android:background="@color/app_line_color" />

            <TextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/about_me_dialog_ok_bg"
                android:gravity="center"
                android:text="@string/dialog_ok"
                android:textColor="@color/red"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>